# redevops-rag

./: .gitignore  README.md  pyproject.toml
benchmarks/: build_priors.py  build_routes.py  build_tempo.py  eval_cube.py  eval_cube2.py  eval_diagnostic.py  eval_embedders.py  eval_ladder.py  eval_longmemeval_diver.py  eval_longmemeval_reasonir.py  eval_matrix.py  eval_tempo_diver.py  eval_tempo_reasonir.py  eval_v5.py  eval_v5_ablation.py  eval_v5_bandit.py  eval_v5_context_size.py
benchmarks/results/: ladder_N15.txt  lme_reasonir.out  tempo_reasonir.out
benchmarks/results/matrix/: diver__longmemeval.json  diver__musique.json  diver__popqa.json  hipporag__musique.json  hybrid__longmemeval.json  hybrid__musique.json  hybrid__popqa.json  reasonir__longmemeval.json  reasonir__musique.json  reasonir__popqa.json  simgraph__longmemeval.json  simgraph__musique.json  simgraph__popqa.json
examples/: quickstart.py
src/redevops_rag/: __init__.py  cli.py  embed.py  ingest.py  maxsim.py  multimodal.py  pg_store.py  rag.py  rerank.py  retrieve.py  store.py  temporal.py
tests/: test_correctness_fixes.py  test_embed_factory.py  test_encoder_routing.py  test_incremental_insert.py  test_maxsim.py  test_pg_store.py  test_smoke.py
